# rust_practice

./: .gitignore
Rust_Short/oohnivch-00/ex00/: hello.rs
Rust_Short/oohnivch-00/ex01/: min.rs
Rust_Short/oohnivch-00/ex02/: collatz.rs  print_bytes.rs  yes.rs
Rust_Short/oohnivch-00/ex03/: fizzbuzz.rs
Rust_Short/oohnivch-00/ex04/: Cargo.toml
Rust_Short/oohnivch-00/ex04/src/: main.rs  other.rs  overflow.rs
Rust_Short/oohnivch-00/ex05/: Cargo.toml
Rust_Short/oohnivch-00/ex05/src/: main.rs
Rust_Short/oohnivch-00/ex06/: Cargo.toml
Rust_Short/oohnivch-00/ex06/src/: main.rs
Rust_Short/oohnivch-01/ex00/: Cargo.toml
Rust_Short/oohnivch-01/ex00/src/: lib.rs
Rust_Short/oohnivch-01/ex01/: Cargo.toml
Rust_Short/oohnivch-01/ex01/src/: lib.rs
Rust_Short/oohnivch-01/ex02/src/: lib.rs
Rust_Short/oohnivch-01/ex03/src/: lib.rs
Rust_Short/oohnivch-01/ex04/src/: lib.rs
Rust_Short/oohnivch-01/ex05/src/: lib.rs
Rust_Short/oohnivch-01/ex06/src/: lib.rs
Rust_Short/oohnivch-02/: README.md
Rust_Short/oohnivch-02/ex00/src/: main.rs
Rust_Short/oohnivch-02/ex01/src/: lib.rs
Rust_Short/oohnivch-02/ex02/src/: lib.rs
Rust_Short/oohnivch-02/ex03/src/: main.rs
Rust_Short/oohnivch-02/ex04/src/: main.rs
Rust_Short/oohnivch-03/ex00/src/: main.rs
Rust_Short/oohnivch-03/ex01/src/: lib.rs
Rust_Short/oohnivch-03/ex02/src/: main.rs
Rust_Short/oohnivch-03/ex03/src/: main.rs
Rust_Short/oohnivch-03/ex04/src/: main.rs
Rust_Short/oohnivch-04/: Cargo.toml
Rust_Short/oohnivch-04/ex00/src/: main.rs
Rust_Short/oohnivch-04/ex01/src/: main.rs
Rust_Short/oohnivch-05/: Cargo.toml
Rust_Short/oohnivch-06/: Cargo.toml
advent_of_code_2024/: Cargo.toml
advent_of_code_2024/day1_1/: Cargo.toml
advent_of_code_2024/day1_1/src/: main.rs
advent_of_code_2024/day1_2/: Cargo.toml
advent_of_code_2024/day1_2/src/: main.rs
(+10 files in other folders)
