# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    Cargo.toml                                         :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: oohnivch <oohnivch@student.42vienna.com>   +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2024/10/07 13:28:22 by oohnivch          #+#    #+#              #
#    Updated: 2024/10/07 18:02:16 by oohnivch         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

[package]
name = "module00-ex04"
edition = "2021"
authors = ["oohnivch"]
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
default-run = "module00-ex04"
publish = false

[profile.release]
strip = "symbols"

[profile.dev]
strip = "none"

[profile.no-overflows]
inherits = "dev"
overflow-checks = false

[dependencies]

[[bin]]
name = "module00-ex04"
path = "src/main.rs"

[[bin]]
name = "other"
path = "src/other.rs"

[[bin]]
name = "test-overflows"
path = "src/overflow.rs"
